# UIC-Codes

./: README.md  european_vehicle_number.py  pyproject.toml  tests.py  vehicles_details.py
.github/workflows/: tests.yml
uic_codes/: countries.py  european_vehicle_number.py  logger.py  main.py
