[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uic-codes"
version = "0.1.0"
description = "A package for handling UIC codes, vehicle details, and related utilities."
readme = "README.md"
requires-python = ">=3.8"
authors = [
	{ name = "Maxime Kuntz" }
]
classifiers = [
	"Programming Language :: Python :: 3"
]

[project.urls]
Repository = "https://github.com/maximekuntz/UIC-Codes"
"Bug Tracker" = "https://github.com/maximekuntz/UIC-Codes/issues"

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }
test = { file = ["requirements-tests.txt"] }
